WebApp - Link to Common

--- a/solution/Msh/Msh.WebApp/Msh.WebApp.csproj
+++ b/solution/Msh/Msh.WebApp/Msh.WebApp.csproj
@@ -15,4 +15,12 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Msh.Common\Msh.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pages\" />
+  </ItemGroup>
+
 </Project>
