--- a/solution/Msh/Msh.WebApp/Msh.WebApp.csproj
+++ b/solution/Msh/Msh.WebApp/Msh.WebApp.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Msh.Common\Msh.Common.csproj" />
+    <ProjectReference Include="..\Msh.HotelCache\Msh.HotelCache.csproj" />
     <ProjectReference Include="..\Msh.Pay.CoinCorner\Msh.Pay.CoinCorner.csproj" />
     <ProjectReference Include="..\Msh.Pay.FreedomPay\Msh.Pay.FreedomPay.csproj" />
   </ItemGroup>
