--- a/solution/Msh/Msh.WebApp/Msh.WebApp.csproj
+++ b/solution/Msh/Msh.WebApp/Msh.WebApp.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Msh.Admin\Msh.Admin.csproj" />
     <ProjectReference Include="..\Msh.Common\Msh.Common.csproj" />
     <ProjectReference Include="..\Msh.HotelCache\Msh.HotelCache.csproj" />
     <ProjectReference Include="..\Msh.Pay.CoinCorner\Msh.Pay.CoinCorner.csproj" />
