--- a/solution/Msh/Msh.Admin/Msh.Admin.csproj
+++ b/solution/Msh/Msh.Admin/Msh.Admin.csproj
@@ -10,4 +10,8 @@
 		<ProjectReference Include="..\Msh.Common\Msh.Common.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Models\ViewModels\Hotels\" />
+	</ItemGroup>
+
 </Project>
