--- a/solution/Msh/Msh.WebApp/Msh.WebApp.csproj
+++ b/solution/Msh/Msh.WebApp/Msh.WebApp.csproj
@@ -30,7 +30,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Pages\" />
+    <Folder Include="Views\Shared\Admin\Hotels\" />
   </ItemGroup>
 
 </Project>
