Refactor LogXmlConfig to use enum instead of strings ...
and add editing of LogXmlConfig and LogXmlConfigItems

--- a/solution/Msh/Msh.Opera.Ows/Msh.Opera.Ows.csproj
+++ b/solution/Msh/Msh.Opera.Ows/Msh.Opera.Ows.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Msh.Common\Msh.Common.csproj" />
+    <ProjectReference Include="..\Msh.Loggers\Msh.Loggers.csproj" />
   </ItemGroup>
 
 </Project>
