--- a/solution/Msh/Msh.Admin/Msh.Admin.csproj
+++ b/solution/Msh/Msh.Admin/Msh.Admin.csproj
@@ -6,8 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="NewFolder\**" />
+    <EmbeddedResource Remove="NewFolder\**" />
+    <None Remove="NewFolder\**" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<ProjectReference Include="..\Msh.Common\Msh.Common.csproj" />
+		<ProjectReference Include="..\Msh.HotelCache\Msh.HotelCache.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
