Save Imports test proj changes

--- a/solution/Msh/Msh.Imports/Msh.Imports.csproj
+++ b/solution/Msh/Msh.Imports/Msh.Imports.csproj
@@ -21,7 +21,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\Msh.Admin\Msh.Admin.csproj" />
 	  <ProjectReference Include="..\Msh.Common\Msh.Common.csproj" />
+	  <ProjectReference Include="..\Msh.HotelCache\Msh.HotelCache.csproj" />
 	  <ProjectReference Include="..\Msh.Opera.Ows\Msh.Opera.Ows.csproj" />
 	  <ProjectReference Include="..\Msh.Pay.CoinCorner\Msh.Pay.CoinCorner.csproj" />
 	  <ProjectReference Include="..\Msh.TestSupport\Msh.TestSupport.csproj" />
